--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.6.5",
     "vee-validate": "^3.4.14",
     "vue": "^2.6.11",
+    "vue-dialog": "0.0.3",
     "vue-router": "^3.2.0",
     "vuetify": "^2.4.0",
     "vuetify-dialog": "^2.0.17",
