--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
   },
   "dependencies": {
     "axios": "^0.24.0",
+    "ckeditor4-vue": "^2.1.1",
     "core-js": "^3.6.5",
+    "quill": "^1.3.6",
+    "tiptap": "^1.32.2",
+    "tiptap-extensions": "^1.35.2",
     "vee-validate": "^3.4.14",
     "vue": "^2.6.11",
     "vue-dialog": "0.0.3",
