--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "vue": "^2.6.11",
     "vue-cookies": "^1.8.2",
     "vue-dialog": "0.0.3",
+    "vue-img-color-picker": "^1.0.0",
     "vue-router": "^3.2.0",
     "vuetify": "^2.4.0",
     "vuetify-dialog": "^2.0.17",
     "vuex": "^3.4.0",
-    "vuex-persistedstate": "^4.1.0"
+    "vuex-persistedstate": "^4.1.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
