--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve --port 7070",
-    "build": "vue-cli-service build",
+    "build": "vue-cli-service build --no-clean", 
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
